# jxs

./: CMakeLists.txt  LICENSE.md  README.md
extras/: selftest_part4.sh  validate_part4.sh
libjxs/: CMakeLists.txt
libjxs/public/: libjxs.h
libjxs/src/: bitpacking.c  bitpacking.h  buf_mgmt.h  ids.h  packing.c  packing.h  xs_config.c  xs_dec.c  xs_enc.c  xs_markers.c  xs_markers.h
programs/: CMakeLists.txt  cmdline_options.c  image_open.c  xs_dec_main.c  xs_enc_main.c  xs_enc_main_lite.c
programs/converters/: planar.c
